# pmanager-server

./: .dockerignore  .gitignore  Dockerfile  README.md  countries.json  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test.db
.github/workflows/: flake8.yml  mypy.yml  pytest.yml  request.yml
auth/: crud.py  router.py
drivers/: cloudinaryd.py  db.py  envd.py  jwtd.py
people/: router.py
src/: main.py  models.py
src/auth/: crud.py  helpers.py  jwtd.py  router.py  schemas.py
src/drivers/: db.py  envd.py
src/people/: crud.py  router.py  schemas.py
tests/: conftest.py  test_auth.py  test_main.py  test_people.py
