[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Mitra-Electronics <ishanmitra020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
sqlmodel = "^0.0.8"
pydantic = {extras = ["email"], version = "1.*.*"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
cloudinary = "^1.34.0"
python-multipart = "^0.0.6"
psycopg2 = "^2.9.7"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
httpx = "^0.24.1"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
